refactor(landingPage): change nameTag from ID to Class

--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -178,7 +178,7 @@ body {
 				line-height: 30px;
 				font-size: var(--silverBox-hero-section-introduction-font-size);
 
-				#silverBox-name-tag {
+				.silverBox-name-tag {
 					color: var(--primary-color);
 				}
 			}
