fix(landingPage): fix desktopWave image path

--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -708,7 +708,7 @@ main {
 	}
 
 	#silverBox-CreditsSection {
-		background-image: url("/src/images/desktopWave.png");
+		background-image: url("/public/src/images/desktopWave.png");
 		background-repeat: no-repeat;
 		background-size: cover;
 
