fix(landingPage): fix mobileWave file path

--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -938,7 +938,7 @@ footer {
 	}
 
 	#silverBox-CreditsSection {
-		background-image: url("/src/images/mobileWave.png") !important;
+		background-image: url("/public/src/images/mobileWave.png") !important;
 	}
 
 	#silverBox-header {
