fix(landignPage/creditsSection): fix desktop wave

--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -711,6 +711,7 @@ main {
 		background-image: url("/public/src/images/desktopWave.png");
 		background-repeat: no-repeat;
 		background-size: cover;
+		margin-top: -25px;
 
 		.silverBox-teamMembers {
 			display: grid;
