refactor(header/hamburger): aligned hamurger center

--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -258,6 +258,7 @@ body {
 				}
 
 				#hamburger-menu {
+					margin-top: 6px;
 					cursor: pointer;
 					display: none;
 					flex-direction: column;
